# agent-terminal

./: .gitignore  Cargo.toml  M009-HANDOFF.md  README.md
.github/workflows/: ci.yml  release.yml
crates/agent-terminal-cli/: Cargo.toml
crates/agent-terminal-cli/src/: args.rs
crates/agent-terminal-cli/src/daemon/: client.rs  (+2 more)
crates/agent-terminal-cli/tests/: error_identity.rs  press_contract.rs  wait_contract.rs
crates/agent-terminal-core/src/: error.rs  input.rs  protocol.rs  snapshot.rs
crates/agent-terminal-core/tests/: error_identity.rs
crates/pilotty-cli/: Cargo.toml
crates/pilotty-cli/src/: args.rs  main.rs
crates/pilotty-cli/src/daemon/: client.rs  paths.rs  pty.rs  server.rs  session.rs  terminal.rs
crates/pilotty-cli/tests/: error_identity.rs  lifecycle_contract.rs  press_contract.rs  public_identity.rs  wait_contract.rs
crates/pilotty-core/: Cargo.toml
crates/pilotty-core/src/: error.rs  format.rs  input.rs  lib.rs  protocol.rs  snapshot.rs
docs/superpowers/specs/: 2026-05-12-crate-rename-design.md
npm/: README.md  package.json
skills/agent-terminal/: SKILL.md
skills/agent-terminal/references/: element-detection.md  key-input.md  session-management.md
skills/agent-terminal/templates/: dialog-interaction.sh  element-detection.sh  multi-session.sh  vim-workflow.sh
skills/pilotty/: SKILL.md
tests/: roundtrip.sh  verify-agent-terminal-runtime.sh  verify-docs-release-identity.sh  verify-preferred-key-contract.sh  verify-preferred-wait-contract.sh  verify-repo-branding-audit.sh
tests/fixtures/: gen-roundtrip.sh  roundtrip.ansi
(+1 files in other folders)
