[package]
name = "agent-terminal-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI and daemon for agent-terminal"

[[bin]]
name = "agent-terminal"
path = "src/main.rs"

[dependencies]
agent-terminal-core = { path = "../pilotty-core" }

tokio = { workspace = true }
clap = { workspace = true }
clap_complete = "4"
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
portable-pty = { workspace = true }
libc = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
vt100 = { workspace = true }
regex = { workspace = true }
dirs = { workspace = true }
